Implemented /sandbox/{id}/cmd endpoint
/cmd endpoint accepts text strings
and runs them as a bash command ('bash -c ...')
inside specified container.
Resolves with ExecResult - exitCode, stdout, stderr, etc.
